--- a/app/views/constraint_week_templates/index.html.erb
+++ b/app/views/constraint_week_templates/index.html.erb
@@ -43,5 +43,9 @@
 	<% end %>
 </table>
 
+<%= link_to 'Add a Costraint Week Template', new_constraint_week_template_path, class: 'btn btn-default' %>
+
 <h4>Constraint Days to choose from</h4>
 <%= render 'constraint_days/chart_display', :cds => @cds %>
+
+<%= link_to 'Add a Costraint Day', new_constraint_day_path, class: 'btn btn-default' %>
