add button to connect to res

--- a/app/views/constraint_week_templates/index.html.erb
+++ b/app/views/constraint_week_templates/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Book a Rehearsal', new_reservation_path, class: 'btn btn-default' %>
+
 <h3>Existing Constraint Weeks</h3>
 
 <table class="table table-bordered">
